--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/db3bcc35e5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+     <article class="view1">
+
+        <nav class="top__heading">
+            <div><h1>Track Your Reps & Time Efficiently</h1></div>
+            <button>Start Workout<i class="fa-solid fa-arrow-right"></i></button>
+        </nav>
+
+     </article>
+
+
+
+
+
 
      <div class="container">
        <h1>Timer</h1>
