start button modified

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
         <nav id="top__heading">
             <div><h1>Track Your Reps & Time Efficiently</h1></div>
-            <button id="start">Start Workout<i class="fa-solid fa-arrow-right"></i></button>
+            <button id="start">Start Workout<i class="fa-solid fa-arrow-right" style="color: rgba(251, 91, 11, 0.943);"></i></button>
         </nav>
 
         <nav id="addPart">
